# QT_02

./: .gitignore
QT_02/: CMakeLists.txt  main.cpp
